--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,12 +17,12 @@
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
         
-<!--     <filter>
+    <filter>
         <filter-name>CorsFilter</filter-name>
         <filter-class>com.example.CorsFilter</filter-class>      
     </filter>  
     <filter-mapping>
         <filter-name>CorsFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> -->
+    </filter-mapping>
 </web-app>
